rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_assignments_in_line.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_err :: < Stmt >\n(stringify! (multiple_assignments_in_line), \"a[1] = 3 = 5;\")"
---
error: Not a valid assignment target.
  ┌─ multiple_assignments_in_line:1:1
  │
1 │ a[1] = 3 = 5;
  │ ^^^^^^^^ Not a valid assignment target.
